--- a/signin.html
+++ b/signin.html
@@ -7,6 +7,7 @@
     <title>Sign in Page</title>
     <link rel="stylesheet"  type="text/css" href="style.css">
     <script src="script.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <div class="container"></div>
